Fix vertical alignment of text within menu items

--- a/packages/radix-ui-themes/src/components/base-menu.css
+++ b/packages/radix-ui-themes/src/components/base-menu.css
@@ -95,6 +95,7 @@
   padding-left: var(--space-5);
   padding-right: var(--space-3);
   font-size: var(--font-size-1);
+  line-height: var(--line-height-1);
   letter-spacing: var(--letter-spacing-1);
   user-select: none;
   cursor: default;
@@ -130,6 +131,7 @@
 
       & .rt-BaseMenuItem {
         font-size: var(--font-size-1);
+        line-height: var(--line-height-1);
         letter-spacing: var(--letter-spacing-1);
       }
     }
@@ -140,6 +142,7 @@
 
       & .rt-BaseMenuItem {
         font-size: var(--font-size-2);
+        line-height: var(--line-height-2);
         letter-spacing: var(--letter-spacing-2);
       }
     }
