--- a/packages/radix-ui-themes/src/components/select.css
+++ b/packages/radix-ui-themes/src/components/select.css
@@ -91,6 +91,7 @@
   padding-left: var(--space-5);
   padding-right: var(--space-5);
   font-size: var(--font-size-1);
+  line-height: var(--line-height-1);
   letter-spacing: var(--letter-spacing-1);
   user-select: none;
   cursor: default;
@@ -215,6 +216,7 @@
 
       & .rt-SelectItem {
         font-size: var(--font-size-1);
+        line-height: var(--line-height-1);
         letter-spacing: var(--letter-spacing-1);
       }
     }
@@ -224,6 +226,7 @@
 
       & .rt-SelectItem {
         font-size: var(--font-size-2);
+        line-height: var(--line-height-2);
         letter-spacing: var(--letter-spacing-2);
       }
     }
@@ -233,11 +236,13 @@
 
       & .rt-SelectLabel {
         font-size: var(--font-size-2);
+        line-height: var(--line-height-2);
         letter-spacing: var(--letter-spacing-2);
       }
 
       & .rt-SelectItem {
         font-size: var(--font-size-3);
+        line-height: var(--line-height-3);
         letter-spacing: var(--letter-spacing-3);
       }
     }
